appId: host.exp.Exponent
---
- runFlow: common/to-board.yaml
- tapOn:
    id: "square-e2"
- tapOn:
    id: "square-e4"
- assertNotVisible:
    id: "piece-e2"
- assertVisible:
    id: "piece-e4"
